# talentika

./: .gitignore  CAPABILITIES.md  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  EMAIL_IMPLEMENTATION.md  EMAIL_SETUP.md  INVITATION_FLOW.md  JWT_IMPLEMENTATION.md  README.md  conftest.py  dev.sh  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  format_test_output.py  pyproject.toml  pytest.ini  run_integration_tests.sh  run_unit_tests.sh  test_auth.py
backend/app/: BUSINESS_LOGIC.md  settings.py  urls.py
backend/geo/: urls.py  views.py
backend/health/: HEALTH_CHECK_BUSINESS_LOGIC.md  tests.py  urls.py  views.py
backend/job_application_analysis/: ai_service.py  apps.py  models.py  ocr_service.py  score_categories.py  serializers.py  urls.py  views.py  workers.py
backend/job_application_analysis/migrations/: 0001_initial.py  0002_reclassify_score_categories.py  0003_add_score_category_field.py  0004_backfill_score_category.py  (+2 more)
backend/job_applications/: admin.py  duplicate_detection.py  emails.py  export_worker.py  models.py  serializers.py  storage.py  tests.py  urls.py  views.py
backend/job_profile/: README.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/organizations/: IMPLEMENTATION.md  admin.py  authentication.py  emails.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/tests/: test_auth_flow.py  test_job_application_flow.py
backend/users/: README.md  admin.py  authentication.py  models.py  urls.py
(+242 files in other folders)
