[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-rest-swagger>=2.2.0",
    "djangorestframework>=3.16.1",
    "drf-yasg[validation]>=1.21.14",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
]
