[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.54",
    "countrystatecity-countries>=1.0.0",
    "django>=6.0.1",
    "django-rest-swagger>=2.2.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg[validation]>=1.21.14",
    "google-genai>=1.64.0",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.14.3",
    "redis>=7.2.0",
    "rq>=2.7.0",
]
